k8s/payout-base/trd-payout.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tezos-remote-signer-loadbalancer-payout-policy
spec:
  podSelector:
    matchLabels:
      xtzapp: tezos-remote-signer-loadbalancer
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8445
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: trd-payout-sender
